--- a/components/ress-scale/modules/scale/pom.xml
+++ b/components/ress-scale/modules/scale/pom.xml
@@ -51,6 +51,7 @@
                 <includes>
                     <include>*.tld</include>
                     <include>*.gif</include>
+                    <include>*.xml</include>
                 </includes>
                 <targetPath>META-INF</targetPath>
             </resource>
@@ -98,6 +99,17 @@
         <dependency>
             <groupId>mobiletech</groupId>
             <artifactId>devicelib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.5.0</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
         </dependency>
     </dependencies>
 </project>
